<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_outline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_pitch"
        android:icon="@drawable/ic_outline_mic_none_24"
        android:title="@string/title_pitch" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_outline_favorite_border_24"
        android:title="@string/title_wishlist" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_outline_density_medium_24"
        android:title="@string/title_more" />

</menu>